2016-08-31  Dirk Eddelbuettel  <edd@debian.org>

	* src/toPOSIXct.cpp: Additional format using '%a %b %d'

2015-03-25  Dirk Eddelbuettel  <edd@debian.org>

	* src/toPOSIXct.cpp:(cToPOSIXct): C library strptime for timimg
	comparison

2015-03-24  Dirk Eddelbuettel  <edd@debian.org>

	* src/toPOSIXct.cpp (charToPOSIXct): Smaller version to test timing
	but commented out as it needs to link with libboost_date_time

	* demo/toPOSIXctTiming.R: Simple timing benchmark

2015-03-20  Dirk Eddelbuettel  <edd@debian.org>

	* demo/toPOSIXct.R: Expanded demo with more examples

	* src/toPOSIXct.cpp: Also support %b and %B formats for month

2015-03-19  Dirk Eddelbuettel  <edd@debian.org>

	* src/toPOSIXct.cpp: Now provides toPOSIXct() function, so source
	file renamed as well from parsePOSIXt.cpp
	* man/toPOSIXct.Rd: Renamed from parsePOSIXt.Rd
	* demo/toPOSIXct.R: Renamed from parsePOSIXt.R; uses toPOSIXct()

2015-03-18  Dirk Eddelbuettel  <edd@debian.org>

	* src/parsePOSIXt.cpp: Remove some no-longer-used code,
	add explicit from conversion from YYYYMMDD to YYYY/MM/DD,
	finer distinction between integer and numeric

	* demo/parsePOSIXt.R: Extended demo file with more examples

2015-03-17  Dirk Eddelbuettel  <edd@debian.org>

	* src/parsePOSIXt.cpp: Added two more formats; also added
	documentation for help page
	* man/parsePOSIXt.Rd: Generated

2015-03-16  Dirk Eddelbuettel  <edd@debian.org>

	* src/parsePOSIXt.cpp (parsePOSIXt): Added vectorized function to
	parse date(time) from test and return (UTC) POSIXct objects
	* src/RcppExports.cpp: Auto-created by use of Rcpp Attributes
	* R/RcppExports.R: Auto-created by use of Rcpp Attributes

	* demo/parsePOSIXt.R: Simple demo

	* .travis.yml: Now use ppa:edd/misc for r-cran-rcpp

2014-04-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.2.3

	* DESCRIPTION: Depends on R (>= 3.1.0) for C++11 and long long

2014-04-11  Dirk Eddelbuettel  <edd@debian.org>
