@@ -1,14 +1,14 @@
-# This file was generated by Rcpp::compileAttributes
+# Generated by using Rcpp::compileAttributes() -> do not edit by hand
 # Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
 #' This function uses the Boost Date_Time library to parse 
-#' datetimes (and dates) from strings. It returns a 
-#' \code{DatetimeVector},  i.e. a vector of \sQuote{POSIXct} 
-#' objects. These represent dates and time as (possibly fractional) 
-#' seconds since the \sQuote{epoch} of January 1, 1970. The default
-#' timezone of \sQuote{UTC} is set.
+#' datetimes (and dates) from strings, integers or even numeric values
+#' (which are cast to strings internall). It returns a vector of
+#' \code{POSIXct} objects. These represent dates and time as (possibly
+#' fractional) seconds since the \sQuote{epoch} of January 1, 1970. 
+#' A timezone can be set, if none is supplied \sQuote{UTC} is set.
 #'
-#' A numer of fixed formats are tried in succession. These include
+#' A number of fixed formats are tried in succession. These include
 #' the standard ISO format \sQuote{YYYY-MM-DD HH:MM:SS} as well as
 #' different local variants including several forms popular in the 
 #' United States.  Two-digits years and clearly ambigous formats such
@@ -19,10 +19,11 @@
 #' microseconds, the Boost compile-time option for nano-second resolution 
 #' has not been enabled.
 #'
-#' @title Parse POSIXct objects from character variables
-#' @param x A vector of type character, integer or numeric with 
+#' @title Parse POSIXct objects from input data
+#' @param x A vector (or list) of type character, integer or numeric with 
 #' date(time) expressions to be parsed and converted. 
-#' @return A vector of \code{Datetime} objects with \sQuote{POSIXct} elements.
+#' @param tz A string with the timezone, defaults to \sQuote{UTC} if unset
+#' @return A vector of \sQuote{POSIXct} elements.
 #' @author Dirk Eddelbuettel
 #' @examples
 #' ## See the source code (hah!) for a full list of formats
@@ -38,16 +39,63 @@
 #'           "03-21-2004",
 #'           "20010101")   
 #' toPOSIXct(times)
-#' format(toPOSIXct(times), tz="UTC")
-toPOSIXct <- function(x) {
-    .Call('RcppBDT_toPOSIXct', PACKAGE = 'RcppBDT', x)
+toPOSIXct <- function(x, tz = "UTC") {
+    .Call('RcppBDT_toPOSIXct', PACKAGE = 'RcppBDT', x, tz)
 }
 
-charToPOSIXct <- function(sv) {
-    .Call('RcppBDT_charToPOSIXct', PACKAGE = 'RcppBDT', sv)
+#' This function uses the Boost Date_Time library to parse 
+#' datetimes from strings. It returns a vector of \code{POSIXct}
+#' objects. These represent dates and time as (possibly
+#' fractional) seconds since the \sQuote{epoch} of January 1, 1970. 
+#' A timezone can be set, if none is supplied \sQuote{UTC} is set.
+#'
+#' A single standard ISO format \sQuote{YYYY-MM-DD HH:MM:SS} (with
+#' optional trailing fractional seconds) is tried.  In the case of
+#' parsing failure a \code{NA} value is returned. See the function
+#' \code{\link{toPOSIXct}} for more general input format
+#'
+#' Fractional seconds are supported as well.  As R itself only supports 
+#' microseconds, the Boost compile-time option for nano-second resolution 
+#' has not been enabled.
+#'
+#' @title Parse POSIXct objects from character variables
+#' @param sv A vector of type character with datetime expressions
+#' in ISO format to be parsed and converted. 
+#' @param tz A string with the timezone, defaults to \sQuote{UTC} if unset
+#' @return A vector of \sQuote{POSIXct} elements.
+#' @author Dirk Eddelbuettel
+#' @examples
+#' times <- c("2004-03-21 12:45:33.123456",
+#'           "2004-03-21 12:45:34")
+#' charToPOSIXct(times)
+charToPOSIXct <- function(sv, tz = "UTC") {
+    .Call('RcppBDT_charToPOSIXct', PACKAGE = 'RcppBDT', sv, tz)
 }
 
-cToPOSIXct <- function(sv) {
-    .Call('RcppBDT_cToPOSIXct', PACKAGE = 'RcppBDT', sv)
+#' This function uses the Boost Date_Time library to parse 
+#' datetimes from strings. It returns a vector of \code{POSIXct}
+#' objects. These represent dates and time as (possibly
+#' fractional) seconds since the \sQuote{epoch} of January 1, 1970. 
+#' A timezone can be set, if none is supplied \sQuote{UTC} is set.
+#'
+#' A single standard ISO format \sQuote{YYYY-MM-DD HH:MM:SS} is tried.
+#' See the function //' \code{\link{toPOSIXct}} for more general input format,
+#' and \code{\link{charToPOSIXct}} for character conversion.
+#'
+#' This function is for comparison only and uses the C library function
+#' \code{strptime} which does \emph{not} work for sub-second entries.
+#'
+#' @title Parse POSIXct objects from character variables
+#' @param sv A vector of type character with datetime expressions
+#' in ISO format to be parsed and converted. 
+#' @param tz A string with the timezone, defaults to \sQuote{UTC} if unset
+#' @return A vector of \sQuote{POSIXct} elements.
+#' @author Dirk Eddelbuettel
+#' @examples
+#' times <- c("2004-03-21 12:45:33.123456",
+#'           "2004-03-21 12:45:34")
+#' cToPOSIXct(times)
+cToPOSIXct <- function(sv, tz = "UTC") {
+    .Call('RcppBDT_cToPOSIXct', PACKAGE = 'RcppBDT', sv, tz)
 }
 
