@@ -1,6 +1,7 @@
-RcppBDT	     Boost Date.Time date functionality demo
-RcppBDTtz    Boost Date.Time timezone functionality demo
-RcppBDTdu    Boost Date.Time duration object demo
-RcppBDTpt    Boost Date.Time posix time object demo
-RcppBDTdd    Boost Date.Time date duration object demo
-toPOSIXct    (Date)time parsing and conversion demo
+RcppBDT	           Boost Date.Time date functionality demo
+RcppBDTtz          Boost Date.Time timezone functionality demo
+RcppBDTdu          Boost Date.Time duration object demo
+RcppBDTpt          Boost Date.Time posix time object demo
+RcppBDTdd          Boost Date.Time date duration object demo
+toPOSIXct          (Date)time parsing and conversion demo
+toPOSIXctTiming    Benchmarking (Date)time parsing and conversion demo
