@@ -1,4 +1,4 @@
-// This file was generated by Rcpp::compileAttributes
+// Generated by using Rcpp::compileAttributes() -> do not edit by hand
 // Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
 #include "../inst/include/RcppBDT.h"
@@ -7,35 +7,38 @@
 using namespace Rcpp;
 
 // toPOSIXct
-Rcpp::DatetimeVector toPOSIXct(SEXP x);
-RcppExport SEXP RcppBDT_toPOSIXct(SEXP xSEXP) {
+Rcpp::NumericVector toPOSIXct(SEXP x, std::string tz);
+RcppExport SEXP RcppBDT_toPOSIXct(SEXP xSEXP, SEXP tzSEXP) {
 BEGIN_RCPP
-    Rcpp::RObject __result;
-    Rcpp::RNGScope __rngScope;
+    Rcpp::RObject rcpp_result_gen;
+    Rcpp::RNGScope rcpp_rngScope_gen;
     Rcpp::traits::input_parameter< SEXP >::type x(xSEXP);
-    __result = Rcpp::wrap(toPOSIXct(x));
-    return __result;
+    Rcpp::traits::input_parameter< std::string >::type tz(tzSEXP);
+    rcpp_result_gen = Rcpp::wrap(toPOSIXct(x, tz));
+    return rcpp_result_gen;
 END_RCPP
 }
 // charToPOSIXct
-Rcpp::DatetimeVector charToPOSIXct(Rcpp::CharacterVector sv);
-RcppExport SEXP RcppBDT_charToPOSIXct(SEXP svSEXP) {
+Rcpp::NumericVector charToPOSIXct(Rcpp::CharacterVector sv, std::string tz);
+RcppExport SEXP RcppBDT_charToPOSIXct(SEXP svSEXP, SEXP tzSEXP) {
 BEGIN_RCPP
-    Rcpp::RObject __result;
-    Rcpp::RNGScope __rngScope;
+    Rcpp::RObject rcpp_result_gen;
+    Rcpp::RNGScope rcpp_rngScope_gen;
     Rcpp::traits::input_parameter< Rcpp::CharacterVector >::type sv(svSEXP);
-    __result = Rcpp::wrap(charToPOSIXct(sv));
-    return __result;
+    Rcpp::traits::input_parameter< std::string >::type tz(tzSEXP);
+    rcpp_result_gen = Rcpp::wrap(charToPOSIXct(sv, tz));
+    return rcpp_result_gen;
 END_RCPP
 }
 // cToPOSIXct
-Rcpp::DatetimeVector cToPOSIXct(Rcpp::CharacterVector sv);
-RcppExport SEXP RcppBDT_cToPOSIXct(SEXP svSEXP) {
+Rcpp::NumericVector cToPOSIXct(Rcpp::CharacterVector sv, std::string tz);
+RcppExport SEXP RcppBDT_cToPOSIXct(SEXP svSEXP, SEXP tzSEXP) {
 BEGIN_RCPP
-    Rcpp::RObject __result;
-    Rcpp::RNGScope __rngScope;
+    Rcpp::RObject rcpp_result_gen;
+    Rcpp::RNGScope rcpp_rngScope_gen;
     Rcpp::traits::input_parameter< Rcpp::CharacterVector >::type sv(svSEXP);
-    __result = Rcpp::wrap(cToPOSIXct(sv));
-    return __result;
+    Rcpp::traits::input_parameter< std::string >::type tz(tzSEXP);
+    rcpp_result_gen = Rcpp::wrap(cToPOSIXct(sv, tz));
+    return rcpp_result_gen;
 END_RCPP
 }
